--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "csstype": "^2.2.0"
   },
   "deprecated": false,
-  "description": "TypeScript definitions for React (minus the coupling to React DOM)",
+  "description": "TypeScript definitions for React (minus the coupling of JSX to React DOM)",
   "homepage": "https://github.com/shirakaba/react-typings-for-custom-renderers#readme",
   "license": "MIT",
   "main": "",
@@ -110,6 +110,5 @@
   "scripts": {},
   "typeScriptVersion": "2.8",
   "types": "index",
-  "typesPublisherContentHash": "59a76ac3cf8d9766c117506cb0118cf5b72d6dfded31ffa59a86c43a2ff80faa",
   "version": "16.9.11"
 }
